# rive-cpp

./: .gitignore  CMakeGenerate.bat  CMakeLists.txt  README.md
dependencies/: rive_harfbuzz.vcxproj  rive_harfbuzz.vcxproj.filters  rive_sheenbidi.vcxproj
src/: artboard.cpp
tess/: CMakeGenerate.bat  CMakeLists.txt
tess/include/rive/tess/: segmented_contour.hpp
tess/src/: segmented_contour.cpp
tess/src/sokol/: sokol_tess_renderer.cpp
